--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ var ecs_ajax_params = {"ajaxurl":"https:\/\/www.amoled.ch\/wp-admin\/admin-ajax.
 				<div class="elementor-widget-container">
 					<div class="elementor-image">
 											<a href="#">
-							<h2>Elektriker Neumeister</h2>								</a>
+							<h2>Elektriker Wicke</h2>								</a>
 											</div>
 				</div>
 				</div>
@@ -335,7 +335,7 @@ var ecs_ajax_params = {"ajaxurl":"https:\/\/www.amoled.ch\/wp-admin\/admin-ajax.
 				</div>
 				<div class="elementor-element elementor-element-d923780 elementor-widget elementor-widget-heading" data-id="d923780" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h4 class="elementor-heading-title elementor-size-default">Elektriker Neumeister</h4>		</div>
+			<h4 class="elementor-heading-title elementor-size-default">Elektriker Wicke</h4>		</div>
 				</div>
 				<div class="elementor-element elementor-element-cf9cf3b elementor-widget-divider--view-line elementor-widget elementor-widget-divider" data-id="cf9cf3b" data-element_type="widget" data-widget_type="divider.default">
 				<div class="elementor-widget-container">
@@ -1007,7 +1007,7 @@ regelmässig gewartet und geprüft werden.
 							<div class="elementor-widget-wrap">
 						<div class="elementor-element elementor-element-ffbd1ef elementor-widget elementor-widget-heading" data-id="ffbd1ef" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h4 class="elementor-heading-title elementor-size-default">wir leben Neumeister</h4>		</div>
+			<h4 class="elementor-heading-title elementor-size-default">wir leben Wicke</h4>		</div>
 				</div>
 						</div>
 					</div>
@@ -1314,7 +1314,7 @@ regelmässig gewartet und geprüft werden.
 						<span class="elementor-button-icon elementor-align-icon-left">
 									<i class="fa fa-long-arrow-left" aria-hidden="true"></i>
 							</span>
-						<span class="elementor-button-text">Entdecken Sie Neumeister!</span>
+						<span class="elementor-button-text">Entdecken Sie Wicke!</span>
 		</span>
 					</a>
 		</div>
@@ -1790,7 +1790,7 @@ regelmässig gewartet und geprüft werden.
 							<div class="elementor-widget-wrap">
 						<div class="elementor-element elementor-element-07ce609 elementor-widget elementor-widget-heading" data-id="07ce609" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h4 class="elementor-heading-title elementor-size-default"><a href="mailto:info@elektriker-neumeister.de">info@elektriker-neumeister.de</a></h4>		</div>
+			<h4 class="elementor-heading-title elementor-size-default"><a href="mailto:info@elektriker-Wicke.de">info@elektriker-Wicke.de</a></h4>		</div>
 				</div>
 						</div>
 					</div>
@@ -1814,8 +1814,8 @@ regelmässig gewartet und geprüft werden.
 							<div class="elementor-widget-wrap">
 						<div class="elementor-element elementor-element-7728f8a elementor-widget elementor-widget-heading" data-id="7728f8a" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h4 class="elementor-heading-title elementor-size-default">Mainzer Str. 30B
-, 55457 Gensingen</h4>		</div>
+			<h4 class="elementor-heading-title elementor-size-default">Ulzheimer Str. 14,
+, 55270 Ober-Olm</h4>		</div>
 				</div>
 						</div>
 					</div>
@@ -1940,7 +1940,7 @@ regelmässig gewartet und geprüft werden.
 							<div class="elementor-widget-wrap">
 						<div class="elementor-element elementor-element-c7af0a2 elementor-widget elementor-widget-text-editor" data-id="c7af0a2" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-					<div class="elementor-text-editor elementor-clearfix"><p><span style="color: #000000;"><a style="color: #000000;" href="tel:0415112530">041 511 25 3</a>0</span></p><p><span style="color: #000000;"><a style="color: #000000;" href="mailto:info@elektriker-neumeister.de">info@elektriker-neumeister.de</a></span></p></div>
+					<div class="elementor-text-editor elementor-clearfix"><p><span style="color: #000000;"><a style="color: #000000;" href="tel:0415112530">041 511 25 3</a>0</span></p><p><span style="color: #000000;"><a style="color: #000000;" href="mailto:info@elektriker-Wicke.de">info@elektriker-Wicke.de</a></span></p></div>
 				</div>
 				</div>
 						</div>
@@ -1965,7 +1965,7 @@ regelmässig gewartet und geprüft werden.
 							<div class="elementor-widget-wrap">
 						<div class="elementor-element elementor-element-02c00e9 elementor-widget elementor-widget-text-editor" data-id="02c00e9" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-					<div class="elementor-text-editor elementor-clearfix"><p>Mainzer Str. 30B,<br>55457 Gensingen</p></div>
+					<div class="elementor-text-editor elementor-clearfix"><p>Ulzheimer Str. 14,<br>55270 Ober-Olm</p></div>
 				</div>
 				</div>
 						</div>
@@ -2019,7 +2019,7 @@ regelmässig gewartet und geprüft werden.
 							<div class="elementor-widget-wrap">
 						<div class="elementor-element elementor-element-a0fcedd elementor-widget elementor-widget-text-editor" data-id="a0fcedd" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-					<div class="elementor-text-editor elementor-clearfix"><p>Copyright © 2021 Elektriker Neumeister AG</p></div>
+					<div class="elementor-text-editor elementor-clearfix"><p>Copyright © 2021 Elektriker Wicke AG</p></div>
 				</div>
 				</div>
 						</div>
@@ -2285,7 +2285,7 @@ regelmässig gewartet und geprüft werden.
 				<div class="elementor-element elementor-element-6faa1bf elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="6faa1bf" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="mailto:info@elektriker-neumeister.de" class="elementor-button-link elementor-button elementor-size-sm" role="button">
+			<a href="mailto:info@elektriker-Wicke.de" class="elementor-button-link elementor-button elementor-size-sm" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">Jetzt bewerben</span>
 		</span>
@@ -3908,7 +3908,7 @@ regelmässig gewartet und geprüft werden.
 							<div class="elementor-widget-wrap">
 						<div class="elementor-element elementor-element-4e3ad43 elementor-widget elementor-widget-heading" data-id="4e3ad43" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h4 class="elementor-heading-title elementor-size-default"><a href="mailto:info@elektriker-neumeister.de">info@elektriker-neumeister.de</a></h4>		</div>
+			<h4 class="elementor-heading-title elementor-size-default"><a href="mailto:info@elektriker-Wicke.de">info@elektriker-Wicke.de</a></h4>		</div>
 				</div>
 						</div>
 					</div>
@@ -4062,7 +4062,7 @@ regelmässig gewartet und geprüft werden.
 							<div class="elementor-widget-wrap">
 						<div class="elementor-element elementor-element-f41ea7e elementor-widget elementor-widget-text-editor" data-id="f41ea7e" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-					<div class="elementor-text-editor elementor-clearfix"><p>Mainzer Str. 30B,<br>55457 Gensingen<br> </p></div>
+					<div class="elementor-text-editor elementor-clearfix"><p>Ulzheimer Str. 14,<br>55270 Ober-Olm<br> </p></div>
 				</div>
 				</div>
 						</div>
@@ -4103,7 +4103,7 @@ regelmässig gewartet und geprüft werden.
 							<div class="elementor-widget-wrap">
 						<div class="elementor-element elementor-element-809b76e elementor-widget elementor-widget-text-editor" data-id="809b76e" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-					<div class="elementor-text-editor elementor-clearfix"><p><span style="color: #000000;"><a style="color: #000000;" href="tel:0415112530">041 511 25 3</a>0</span></p><p><span style="color: #000000;"><a style="color: #000000;" href="mailto:info@elektriker-neumeister.de">info@elektriker-neumeister.de</a></span></p></div>
+					<div class="elementor-text-editor elementor-clearfix"><p><span style="color: #000000;"><a style="color: #000000;" href="tel:0415112530">041 511 25 3</a>0</span></p><p><span style="color: #000000;"><a style="color: #000000;" href="mailto:info@elektriker-Wicke.de">info@elektriker-Wicke.de</a></span></p></div>
 				</div>
 				</div>
 						</div>
