--- a/index.html
+++ b/index.html
@@ -2096,7 +2096,7 @@ regelmässig gewartet und geprüft werden.
 							<div class="elementor-widget-wrap">
 						<div class="elementor-element elementor-element-f573201 elementor-widget elementor-widget-text-editor" data-id="f573201" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-					<div class="elementor-text-editor elementor-clearfix"><p><span style="color: #ffffff;">Design by <a style="color: #ffffff;" href="#"><strong>Rohnermedia.com</strong></a></span></p></div>
+					<div class="elementor-text-editor elementor-clearfix"><p><span style="color: #ffffff;">  <a style="color: #ffffff;" href="#"><strong></strong></a></span></p></div>
 				</div>
 				</div>
 						</div>
